kitten/reported_bugs/rust/rust-78654/stderr.txt
error[E0670]: `async fn` is not permitted in the 2015 edition

 --> mutant.rs:8:1

  |

8 | async fn biz ( _ : & [ [ u8 ; SIZE ] ] ) -> Vec < ( ) > {

  | ^^^^^ to use `async fn`, switch to Rust 2018

  |

  = help: set `edition = "2018"` in `Cargo.toml`

  = note: for more on editions, read https://doc.rust-lang.org/edition-guide



error[E0670]: `async fn` is not permitted in the 2015 edition

  --> mutant.rs:11:5

   |

11 | pub async fn baz ( & self ) -> Bar < H > {

   |     ^^^^^ to use `async fn`, switch to Rust 2018

   |

   = help: set `edition = "2018"` in `Cargo.toml`

   = note: for more on editions, read https://doc.rust-lang.org/edition-guide



error[E0573]: expected type, found built-in attribute `feature`

 --> mutant.rs:7:18

  |

7 | impl < const H : feature > Foo < H > {

  |                  ^^^^^^^ not a type



error[E0658]: const generics are unstable

 --> mutant.rs:5:20

  |

5 | struct Bar < const H : usize > { }

  |                    ^

  |

  = note: see issue #74878 <https://github.com/rust-lang/rust/issues/74878> for more information

  = help: add `#![feature(min_const_generics)]` to the crate attributes to enable



error[E0658]: const generics are unstable

 --> mutant.rs:6:20

  |

6 | struct Foo < const H : usize > { }

  |                    ^

  |

  = note: see issue #74878 <https://github.com/rust-lang/rust/issues/74878> for more information

  = help: add `#![feature(min_const_generics)]` to the crate attributes to enable



error[E0658]: const generics are unstable

 --> mutant.rs:7:14

  |

7 | impl < const H : feature > Foo < H > {

  |              ^

  |

  = note: see issue #74878 <https://github.com/rust-lang/rust/issues/74878> for more information

  = help: add `#![feature(min_const_generics)]` to the crate attributes to enable



error: internal compiler error: compiler/rustc_typeck/src/check/closure.rs:608:18: async fn generator return type not an inference variable

  --> mutant.rs:8:57

   |

8  |   async fn biz ( _ : & [ [ u8 ; SIZE ] ] ) -> Vec < ( ) > {

   |  _________________________________________________________^

9  | | vec ! [ ]

10 | | }

   | |_^



thread 'rustc' panicked at 'Box<Any>', /rustc/ffa2e7ae8fbf9badc035740db949b9dae271c29f/compiler/rustc_errors/src/lib.rs:891:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (ffa2e7ae8 2020-10-24) running on x86_64-unknown-linux-gnu



note: compiler flags: -C debuginfo=2 -C opt-level=1 -C target-cpu=skylake --crate-type staticlib



query stack during panic:

#0 [typeck] type-checking `Foo::<H>::biz`

#1 [mir_built] building MIR for `Foo::<H>::biz`

end of query stack

error: aborting due to 7 previous errors



Some errors have detailed explanations: E0573, E0658, E0670.

For more information about an error, try `rustc --explain E0573`.

